--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,32 @@
-# Object file
-*.o
+# GITIGNORE template for MATLAB and SIMULINK
+# Windows default autosave extension
+*.asv
 
-# Ada Library Information
-*.ali
+# OSX / *nix default autosave extension
+*.m~
+
+# Compiled MEX binaries (all platforms)
+*.mex*
+
+# Packaged app and toolbox files
+*.mlappinstall
+*.mltbx
+
+# Generated helpsearch folders
+helpsearch*/
+
+# Simulink code generation folders
+slprj/
+sccprj/
+
+# Matlab code generation folders
+codegen/
+
+# Simulink autosave extension
+*.autosave
+
+# Simulink cache files
+*.slxc
+
+# Octave session info
+octave-workspace
